<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".ui.screen.feed.FeedFragment">

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnUpload" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary_rounded"
        android:text="@string/tweet"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btnUpload"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/img_profile_place_holder"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/ivProfile"
                app:layout_constraintTop_toTopOf="@id/ivProfile"
                tools:text="Display Name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTweet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/ivProfile">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTweet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/what_s_happening"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivCamera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTweet" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivGallery"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_gallery"
                app:layout_constraintStart_toEndOf="@id/ivCamera"
                app:layout_constraintTop_toBottomOf="@id/tilTweet" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivTweetPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/tilTweet"
                app:shapeAppearanceOverlay="@style/RoundedCornerImageView" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="@id/ivTweetPhoto"
                app:layout_constraintTop_toTopOf="@id/ivTweetPhoto"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>